--- a/index.html
+++ b/index.html
@@ -8,42 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Countdown Timer</h1>
-        <!-- Geri Sayım Bölümü -->
-        <div id="countdown">
-            <div class="time">
-                <span id="days">00</span>
-                <p>Days</p>
-            </div>
-            <div class="time">
-                <span id="hours">00</span>
-                <p>Hours</p>
-            </div>
-            <div class="time">
-                <span id="minutes">00</span>
-                <p>Minutes</p>
-            </div>
-            <div class="time">
-                <span id="seconds">00</span>
-                <p>Seconds</p>
-            </div>
-        </div>
-
-        <!-- Süre Ayarlama -->
+        <div class="timer" id="timer">00:00</div>
         <div class="controls">
-            <input type="number" id="setDays" placeholder="Day" min="0">
-            <input type="number" id="setHours" placeholder="Hour" min="0" max="23">
-            <input type="number" id="setMinutes" placeholder="Minute" min="0" max="59">
-            <input type="number" id="setSeconds" placeholder="Second" min="0" max="59">
-            <button onclick="setCountdown()">Set Duration</button>
-        </div>
-
-        <!-- Butonlar -->
-        <div class="buttons">
-            <button id="startStopBtn" onclick="toggleCountdown()">Start</button>
-            <button onclick="resetCountdown()">Reset</button>
+            <input type="number" id="minutes" placeholder="Enter minutes" min="0">
+            <button onclick="startTimer()">Start</button>
+            <button onclick="stopTimer()">Stop</button>
+            <button onclick="resetTimer()">Reset</button>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
